[package]
name = "elite"
version = "0.1.3"
authors = ["\"ferhatgec\""]
edition = "2018"
description = "New generation, simple & clean build system."
keywords = ["rust", "term", "build", "system", "ast"]
readme = "README.md"
repository = "https://github.com/ferhatgec/elite"
documentation = "https://docs.rs/elite"
license = "MIT"

include = [
    ".gitignore",
    "Cargo.toml",
    "src/*.rs",
    "examples",
    "resource"
]